--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.8"
+        "bootstrap": "^5.3.8",
+        "chart.js": "^4.5.0",
+        "feather-icons": "^4.29.2"
     }
 }
